--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@tailwindcss/forms": "^0.5.3",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "gh-pages": "^5.0.0",
