--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "@next/font": "13.1.6",
     "@tailwindcss/forms": "^0.5.3",
+    "axios": "^1.2.6",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "gh-pages": "^5.0.0",
     "next": "13.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-paginate": "^8.1.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
