--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@next/font": "13.1.6",
+    "@reduxjs/toolkit": "^1.9.2",
     "@tailwindcss/forms": "^0.5.3",
     "axios": "^1.2.6",
     "eslint": "8.33.0",
@@ -20,7 +21,8 @@
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-paginate": "^8.1.4"
+    "react-paginate": "^8.1.4",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
