--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@reduxjs/toolkit": "^1.9.2",
     "@tailwindcss/forms": "^0.5.3",
     "axios": "^1.2.6",
-    "eslint": "8.33.0",
+    "eslint": "^8.33.0",
     "eslint-config-next": "13.1.6",
     "gh-pages": "^5.0.0",
     "next": "13.1.6",
